<resources>
    <string name="app_name">MineSweeper</string>
    <string name="scans_used"># Scans Used: 0</string>
    <string name="mines_found">Found 0 of</string>
    <string name="pika_seeker">PIKA SEEKER</string>
    <string name="by_hoang_and_devin">By Hoang and Devin</string>
    <string name="skip">Skip</string>
    <string name="settings">SETTINGS</string>
    <string name="board_size">BOARD SIZE</string>
    <string name="mines"># OF PIKACHU(S)</string>
    <string name="erase_times_played">Return</string>
    <string name="help">HELP</string>
    <string name="back">Return</string>
    <string name="congrats_string">CONGRATULATIONS! You found all the Pikachu! Click this box to exit!</string>
    <string name="play_game">Play Game</string>
    <string name="options">Options</string>
    <string name="help_string">Help</string>
    <string name="main_menu_string">MAIN MENU</string>
</resources>
